@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[135] --> Fix loot Trial of Crusader.
 [134] --> Fix Lich King.
 [133] --> Fix loot Freya and Trial of Champion.
 [132] --> Fix Sindragosa.
